--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
 upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
 lib_deps = 
 	adafruit/MAX6675 library@^1.1.0
 	rkoptev/ACS712 Current Sensor@^1.0.2
